--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@material-ui/lab": "4.0.0-alpha.60",
     "@mui/icons-material": "5.0.5",
     "@mui/material": "5.0.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/redux": "3.6.0",
     "axios": "0.21.4",
     "react": "^17",
     "react-dom": "^17",
     "react-redux": "7.2.5",
     "react-router-dom": "6",
-    "react-toastify": "8.0.3",
+    "react-toastify": "^8.0.3",
     "react-use-localstorage": "3.5.3"
   },
   "devDependencies": {
